// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "vaː gɪŋ fiːz vaː wuːbf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "vaː bɔːgs fiː vaː wuːbfs",
    },
    {
      "english": "i give you the bread",
      "target": "aːw gɪv wuː",
    },
    {
      "english": "the king walks at the river",
      "target": "vaː gɪŋ wɔːgz æː vaː bɪvaːb",
    },
    {
      "english": "the king does not see the wolf",
      "target": "vaː gɪŋ ɳaːd fiːz vaː wuːbf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ilu rebe viberet ilu buːpuːuː",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ilu kibei viberent ilu buːpuːiuː",
    },
    {
      "english": "i give you the bread",
      "target": "edo bireo tuːuː",
    },
    {
      "english": "the king walks at the river",
      "target": "ilu rebe ibbuːbiret ilu fbuːbe",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ilu rebe bob viberet ilu buːpuːuː",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "heːjī lopīn hojeːlī",
    },
    {
      "english": "the dogs see the wolves",
      "target": "hojeːlī lopīn hojeːlī",
    },
    {
      "english": "i give you the bread",
      "target": "ne pana hinæ",
    },
    {
      "english": "the king walks at the river",
      "target": "heːjī paja sæːhi peːlo",
    },
    {
      "english": "the king does not see the wolf",
      "target": "heːjī ala lopīn hojeːlī",
    },
  ],
  "preset": "tokipona",
}
`;
